# SFML-Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: constants.h  constants.hpp  defines.h  defines.hpp
server/: package.json  tsconfig.json
server/src/: index.ts
server/test/: package.json
src/: Game.cpp  Game.h  Game.hpp  Log.h  Window.cpp  Window.hpp  main.cpp
src/UI/: Healthbar.cpp  Healthbar.h  Healthbar.hpp  Text.cpp  Text.hpp
src/communication/: Communicator.hpp  Observer.hpp
src/component/: AnimationComponent.cpp  AnimationComponent.hpp  Component.hpp  InputComponent.cpp  InputComponent.hpp  InputMovement.cpp  InputMovement.hpp  InstanceIdComponent.cpp  InstanceIdComponent.hpp  Object.cpp  Object.hpp  Sprite.cpp  Sprite.hpp  SpriteComponent.cpp  SpriteComponent.hpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp
src/components/: Animation.cpp  Animation.h  Animation.hpp  GraphicsComponent.cpp  GraphicsComponent.h  GraphicsComponent.hpp  InputComponent.h  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsComponent.hpp
src/ecs/: ECS_Types.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  SharedContext.hpp  StateManager.cpp  StateManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/gameobject/: GameObject.cpp  GameObject.h  GameObject.hpp  Player.cpp  Player.h  Player.hpp  Tilemap.cpp  Tilemap.h  World.cpp  World.hpp
src/objects/: Chest.cpp  Guy.cpp  Guy.hpp  Object.cpp  Object.hpp  ObjectCollection.cpp  ObjectCollection.hpp  Player.cpp  Player.hpp  Tilemap.cpp  Tilemap.hpp
src/scene/: Scene.hpp  SceneGame.cpp  SceneGame.hpp  SceneIntroScreen.cpp  SceneIntroScreen.hpp  SceneMenu.cpp  SceneMenu.hpp  SceneStateMachine.cpp  SceneStateMachine.hpp
src/state/: Mainstate.cpp  Mainstate.h  Mainstate.hpp
src/system/: CollidableSystem.cpp  CollidableSystem.hpp  DrawableSystem.cpp  DrawableSystem.hpp  Quadtree.cpp  Quadtree.hpp
src/tilemap/: Tilemap.cpp  Tilemap.h  Tilemap.hpp  Tilesheet.cpp  Tilesheet.h  Tilesheet.hpp  constants.h
src/utils/: Debug.cpp  Debug.hpp  (+7 more)
tmp/: Game.cpp  Game.hpp
(+48 files in other folders)
